name:                stg
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/stg#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Stack
                     , Stg.Language
                     , Stg.Language.Prettyprint
                     , Stg.Machine.Env
                     , Stg.Machine.Heap
                     , Stg.Machine.Step
                     , Stg.Machine.Types
                     , Stg.Parser
                     , Stg.Parser.Parser
                     , Stg.Parser.QuasiQuoter
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , megaparsec
                     , text
                     , ansi-wl-pprint
                     , template-haskell
                     , th-lift
  default-extensions:  OverloadedStrings
  other-extensions:    TemplateHaskell
                     , DeriveGeneric
  default-language:    Haskell2010

executable stg-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , stg
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010

test-suite stg-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Test.Stack
                     , Test.Parser.Parser
                     , Test.Parser
                     , Test.Language.Prettyprint
                     , Test.Language
                     , Test.Parser.QuasiQuoter
                     , Test.Orphans
                     , Test.Orphans.Stack
                     , Test.Orphans.Language
  build-depends:       base
                     , stg
                     , text
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck, QuickCheck
                     , tasty-smallcheck, smallcheck
                     , containers
                     , ansi-wl-pprint
                     , megaparsec
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/stg
