name:                stg
version:             0.1.0.0
synopsis:            Educational implementation of the STG (Spineless Gagless
                     G-machine)
description:         See README.md
homepage:            https://github.com/quchen/stg#readme
license:             BSD3
license-file:        LICENSE.md
author:              David Luposchainsky <dluposchainsky (λ) gmail (dot) com>
maintainer:          David Luposchainsky <dluposchainsky (λ) gmail (dot) com>
copyright:           David Luposchainsky <dluposchainsky (λ) gmail (dot) com>
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

Flag doctest
  Description: Enable doctests
  Default:     False


library
  hs-source-dirs:      src
  exposed-modules:     Stack
                     , Stg.Language
                     , Stg.Language.Prelude
                     , Stg.Language.Prelude.Bool
                     , Stg.Language.Prelude.Function
                     , Stg.Language.Prelude.List
                     , Stg.Language.Prelude.Number
                     , Stg.Language.Prelude.Tuple
                     , Stg.Language.Prettyprint
                     , Stg.Language.Prettyprint.Ansi
                     , Stg.Language.Prettyprint.ParserInverse
                     , Stg.Machine
                     , Stg.Machine.Env
                     , Stg.Machine.Evaluate
                     , Stg.Machine.GarbageCollection
                     , Stg.Machine.Heap
                     , Stg.Machine.Types
                     , Stg.Parser
                     , Stg.Parser.Parser
                     , Stg.Parser.QuasiQuoter
                     , Stg.Util
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , ansi-wl-pprint
                     , containers
                     , megaparsec
                     , template-haskell
                     , text
                     , th-lift
  other-extensions:    DeriveGeneric
                     , FlexibleInstances
                     , GeneralizedNewtypeDeriving
                     , LambdaCase
                     , MultiWayIf
                     , OverloadedLists
                     , OverloadedStrings
                     , QuasiQuotes
                     , RankNTypes
                     , TemplateHaskell
                     , TupleSections
                     , TypeFamilies

  default-language:    Haskell2010

executable stg-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , stg
                     , text
                     , ansi-terminal
  default-language:    Haskell2010

test-suite stg-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/Testsuite
  main-is:             Main.hs
  other-modules:       Test.Language
                     , Test.Language.Prelude
                     , Test.Language.Prelude.Bool
                     , Test.Language.Prelude.Function
                     , Test.Language.Prelude.List
                     , Test.Language.Prelude.Number
                     , Test.Language.Prelude.Tuple
                     , Test.Language.Prettyprint
                     , Test.Language.Prettyprint.Ansi
                     , Test.Language.Prettyprint.ParserInverse
                     , Test.Machine
                     , Test.Machine.Evaluate
                     , Test.Machine.Evaluate.Errors
                     , Test.Machine.Evaluate.Programs
                     , Test.Machine.Evaluate.Rules
                     , Test.Machine.Evaluate.TestTemplates.HaskellReference
                     , Test.Machine.Evaluate.TestTemplates.MachineState
                     , Test.Machine.Evaluate.TestTemplates.Util
                     , Test.Machine.GarbageCollection
                     , Test.Machine.Heap
                     , Test.Orphans
                     , Test.Orphans.Language
                     , Test.Orphans.Machine
                     , Test.Orphans.Stack
                     , Test.Parser
                     , Test.Parser.Parser
                     , Test.Parser.QuasiQuoter
                     , Test.Stack
                     , Test.Util
                     , Test.UtilTH
  build-depends:       base
                     , stg
                     , ansi-wl-pprint
                     , containers
                     , megaparsec
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck, QuickCheck
                     , tasty-rerun
                     , tasty-smallcheck, smallcheck
                     , template-haskell
                     , text
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-extensions:    FlexibleContexts
                     , LambdaCase
                     , MultiParamTypeClasses
                     , NumDecimals
                     , OverloadedLists
                     , OverloadedStrings
                     , QuasiQuotes
                     , RankNTypes
                     , TemplateHaskell

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/Doctest
  main-is:             Main.hs
  build-depends:       base
                     , doctest
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  if flag(doctest)
    buildable: True
  else
    buildable: False

source-repository head
  type:     git
  location: https://github.com/quchen/stg
